2012-03-21  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (plus, minus, mul): Removing unnecessary type checks,
	which are already implied by the switch case.

2012-03-21  Kaz Kylheku  <kaz@kylheku.com>

	* txr.1: Doc stubs for new functions floatp, integerp,
	float-str, int-flo and flo-int.

	* txr.vim: Highlighting for new functions.

2012-03-21  Kaz Kylheku  <kaz@kylheku.com>

	* Makefile: link in -lm, which is needed now on some systems.

	* arith.c (plus, minus): Eliminated some unnecessary (double) casts.
	(abso, mul): Floating support.

2012-03-21  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (neg): Floating-point support.

	* parser.l: FLO and FLODOT cases had to be reordered because
	the lex trailing context counts as part of the match length,
	causing 3.0 to be matched as three characters with 0 as
	the trailing context. The cases are split up to eliminate
	a flex warning.

	* stream.c (vformat): Support bignum in floating point
	conversion. Bugfixes: floating point conversion was
	accessing obj->fl.n instead of using n.
	Changed some if/else ladders to switches.

2012-03-21  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (plus): Minor code simplification.
	(minus): Floating point support.

	* mpi-patches/mpi-to-double (mp_to_double): Re-apply lost
	bugfix: index incremented instead of decremented.
	Didn't refresh patch last time, then did a make distclean.

2012-03-20  Kaz Kylheku  <kaz@kylheku.com>

	Regression fix: 1..3 scans incorrectly into 1. .3 tokens.

	* parser.l (SGN, EXP, DIG): New regex definitions.
	(FLO): Do not recognize numbers of the form 123.
	Decimal point must be followed either by exponent, or digits
	(which may then be followed by an exponent).
	(FLODOT): New token type, recognizes 123.
	(grammar): Recognize FLODOT as a floating point number,
	only if it not trailed by another dot, and
	recognize FLO unconditionally.

2012-03-20  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (plus): Completed implementation of bignum-float